<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    tools:context=".BeautyActivity"
    android:orientation="vertical"
    android:background="@color/meeting_background">

    <SeekBar
        android:id="@+id/sb_slider_effect_level"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:maxHeight="2dp"
        android:max="100"
        android:min="0"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:progress="100"
        android:progressDrawable="@drawable/common_seekbar_style"
        android:thumb="@drawable/common_seekbar_thumb" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scrollv_beauty"
        android:background="@android:color/transparent"
        android:scrollbars="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.netease.nertc.beauty.ui.NEBeautyRadioGroup
            android:id="@+id/rg_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_effect_recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_recover"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_recover"/>
        <RadioButton
            android:id="@+id/rb_effect_whiteteeth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_whitenteeth"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_whiteteeth"/>
        <RadioButton
            android:id="@+id/rb_effect_lighteye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_eyebright"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_lighteye"/>
        <RadioButton
            android:id="@+id/rb_effect_whiten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_whiten"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_whiten"/>
        <RadioButton
            android:id="@+id/rb_effect_smooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_smooth"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_smooth"/>
        <RadioButton
            android:id="@+id/rb_effect_smallnose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_thinnose"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_smallnose"/>
        <RadioButton
            android:id="@+id/rb_effect_eyedis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_eyedis"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_eyedis"/>
        <RadioButton
            android:id="@+id/rb_effect_eyeangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_eyeangle"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_eyeangle"/>
        <RadioButton
            android:id="@+id/rb_effect_mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_mouth"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_mouth"/>
        <RadioButton
            android:id="@+id/rb_effect_bigeye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_enlarge_eye"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_bigeye"/>
        <RadioButton
            android:id="@+id/rb_effect_smallface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_shrinkface"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_smallface"/>
        <RadioButton
            android:id="@+id/rb_effect_jaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_shrinkjaw"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_jaw"/>
        <RadioButton
            android:id="@+id/rb_effect_thinface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_thinface"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_thinface"/>
        <RadioButton
            android:id="@+id/rb_effect_faceruddy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_smooth"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_faceruddy"/>
        <RadioButton
            android:id="@+id/rb_effect_longnose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_thinnose"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_longnose"/>
        <RadioButton
            android:id="@+id/rb_effect_philtrum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_thinnose"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_philtrum"/>
        <RadioButton
            android:id="@+id/rb_effect_mouthangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_mouth"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_mouthangle"/>
        <RadioButton
            android:id="@+id/rb_effect_roundeye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_eyeangle"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_roundeye"/>
        <RadioButton
            android:id="@+id/rb_effect_eyecorner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_eyeangle"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_eyecorner"/>
        <RadioButton
            android:id="@+id/rb_effect_vface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_thinface"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_vface"/>
        <RadioButton
            android:id="@+id/rb_effect_underjaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_shrinkjaw"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_underjaw"/>
        <RadioButton
            android:id="@+id/rb_effect_narrowface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_shrinkface"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_narrowface"/>
        <RadioButton
            android:id="@+id/rb_effect_cheekbone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_shrinkface"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_cheekbone"/>
        <RadioButton
            android:id="@+id/rb_effect_facesharpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/ic_effect_thinface"
            android:gravity="center"
            android:paddingLeft="@dimen/effect_btn_padding"
            android:paddingRight="@dimen/effect_btn_padding"
            android:textColor="@color/white"
            android:text="@string/effect_facesharpen"/>
        </com.netease.nertc.beauty.ui.NEBeautyRadioGroup>
    </HorizontalScrollView>
</LinearLayout>
